--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,9 @@
-# Create a Postgres database on Vercel: https://vercel.com/postgres
-POSTGRES_URL="postgres://default:VEDCtvW7op1m@ep-proud-bush-56436929-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
-POSTGRES_PRISMA_URL="postgres://default:VEDCtvW7op1m@ep-proud-bush-56436929-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NON_POOLING="postgres://default:VEDCtvW7op1m@ep-proud-bush-56436929.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_URL="postgres://default:8bdLEonPl1Bv@ep-flat-surf-06089383-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:8bdLEonPl1Bv@ep-flat-surf-06089383-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:8bdLEonPl1Bv@ep-flat-surf-06089383.us-east-1.postgres.vercel-storage.com:5432/verceldb"
 POSTGRES_USER="default"
-POSTGRES_HOST="ep-proud-bush-56436929-pooler.us-east-1.postgres.vercel-storage.com"
-POSTGRES_PASSWORD="VEDCtvW7op1m"
+POSTGRES_HOST="ep-flat-surf-06089383-pooler.us-east-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="8bdLEonPl1Bv"
 POSTGRES_DATABASE="verceldb"
 
 # Generate one here: https://generate-secret.vercel.app/32 (only required for localhost)
