--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.0",
+    "@faker-js/faker": "^8.0.2",
+    "@prisma/client": "^4.16.2",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "bcrypt": "^5.1.0",
+    "chart.js": "^4.3.3",
+    "faker": "^6.6.6",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1"
   },
